--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <div class="topContainer">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
-    <h1>I'm Myo Thura Zaw</h1>
-    <p>a <span class="pro">pro</span>grammer.</p>
+    <h1>I'm Myo Thura Zaw.</h1>
+    <h2 class="programmer">a <span class="pro">pro</span>grammer.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
@@ -22,20 +22,20 @@
     <div class="profile">
       <img id="profile-image" src="images\kirito.jpeg" alt="kirito-picture">
       <h2>Hello.</h2>
-      <p>I am a C# and ASP.NET Web Developer. I ❤ coffee and watching anime.</p>
+      <p>I am a C# and ASP.NET Web Developer. I ❤ coffee, playing Steam games and watching anime.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="" src="images\computer.png" alt="computer-photo">
+        <img class="code-img" src="images\computer.png" alt="computer-photo">
         <h3>Design & Development</h3>
-        <p>I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
+        <p class="code-skill-description">I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
       </div>
       <div class="skill-row">
-        <img class="" src="images\chillies.png" alt="chillies-photo">
+        <img class="chilli-img" src="images\chillies.png" alt="chillies-photo">
         <h3>Hot Wings Challenge</h3>
-        <p>But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
+        <p class="chilli-skill-description">But my best skill is actually in eating hot wings. I am the undisputed queen of hot wing challenges. Ghost Peppers and Carolina Reapers are my favourite snacks.</p>
       </div>
     </div>
     <hr>
