--- a/index.html
+++ b/index.html
@@ -22,13 +22,18 @@
     <div class="profile">
       <img id="profile-image" src="images\kirito.jpeg" alt="kirito-picture">
       <h2>Hello.</h2>
-      <p>I am a C# and ASP.NET Web Developer. I ❤ coffee, playing Steam games and watching anime.</p>
+      <p>I am a C# and ASP.NET Web Developer. I ❤ coffee, donuts and bitter gourd</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="code-img" src="images\computer.png" alt="computer-photo">
+        <img>
+        <h3>London Bridge</h3>
+        <p></p>
+      </div>      
+      <div class="skill-row">
+        <img class="code-img" src="images\computer.png" alt="computer-photo">        
         <h3>Design & Development</h3>
         <p class="code-skill-description">I started learning to code when I was 12 years old because I wanted to make my own video games. Over time, I have gained a wealth of experience designing and developing mobile and web applications..</p>
       </div>
